--- a/generalized-rl/pyproject.toml
+++ b/generalized-rl/pyproject.toml
@@ -9,6 +9,8 @@ python = "^3.6"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
+tensorflow = "1.15.0"
+opencv-python = "^4.4.0.42"
 
 [build-system]
 requires = ["poetry>=0.12"]
