--- a/generalized-rl/pyproject.toml
+++ b/generalized-rl/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "generalized-rl"
 version = "0.1.0"
-description = ""
-authors = ["7000015346 <DebaJyoti.Raychaudhuri@ap.sony.com>"]
+description = "Generalized RL"
+authors = ["Debajyoti Raychaudhuri"]
 
 [tool.poetry.dependencies]
 python = "^3.6"
