--- a/generalized-rl/enduro-agent/pyproject.toml
+++ b/generalized-rl/enduro-agent/pyproject.toml
@@ -1,17 +1,14 @@
 [tool.poetry]
-name = "generalized-rl"
+name = "enduro-agent"
 version = "0.1.0"
-description = "Generalized RL"
-authors = ["Debajyoti Raychaudhuri"]
+description = ""
+authors = ["7000015346 <DebaJyoti.Raychaudhuri@ap.sony.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.6"
-enduro-agent = { path = "enduro-agent/" }
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
-tensorflow = "1.15.3"
-opencv-python = "^4.4.0.42"
 
 [build-system]
 requires = ["poetry>=0.12"]
