--- a/generalized-rl/enduro-agent/pyproject.toml
+++ b/generalized-rl/enduro-agent/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["7000015346 <DebaJyoti.Raychaudhuri@ap.sony.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.6"
+gym = "^0.15.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
