--- a/generalized-rl/enduro-agent/pyproject.toml
+++ b/generalized-rl/enduro-agent/pyproject.toml
@@ -6,7 +6,8 @@ authors = ["7000015346 <DebaJyoti.Raychaudhuri@ap.sony.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.6"
-gym = "^0.15.4"
+gym = "^0.17.2"
+atari-py = "^0.2.6"
 
 [tool.poetry.dev-dependencies]
 
