--- a/generalized-rl/pyproject.toml
+++ b/generalized-rl/pyproject.toml
@@ -12,6 +12,7 @@ enduro-agent = { path = "enduro-agent/" }
 tensorflow = "1.15.3"
 opencv-python = "^4.4.0.44"
 dill = "^0.3.2"
+loguru = "^0.4.1"
 
 [build-system]
 requires = ["poetry>=0.12"]
