--- a/generalized-rl/enduro-agent/pyproject.toml
+++ b/generalized-rl/enduro-agent/pyproject.toml
@@ -2,7 +2,7 @@
 name = "enduro-agent"
 version = "0.1.0"
 description = ""
-authors = ["7000015346 <DebaJyoti.Raychaudhuri@ap.sony.com>"]
+authors = ["Debajyoti Raychaudhuri <draychaudhuri1086@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.6"
