--- a/generalized-rl/enduro-agent/pyproject.toml
+++ b/generalized-rl/enduro-agent/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["Debajyoti Raychaudhuri <draychaudhuri1086@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.6"
+python = "3.6"
 gym = "^0.17.2"
 atari-py = "^0.2.6"
 
