--- a/generalized-rl/flappy-bird-with-gunner-farneback-agent/pyproject.toml
+++ b/generalized-rl/flappy-bird-with-gunner-farneback-agent/pyproject.toml
@@ -5,8 +5,7 @@ description = ""
 authors = ["Debajyoti Raychaudhuri <draychaudhuri1086@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.6.8"
-pipeline = { path = "Flow-Classification-Pipeline/pipeline/" }
+python = "3.6.8"
 
 [tool.poetry.dev-dependencies]
 
