--- a/generalized-rl/enduro-bot/pyproject.toml
+++ b/generalized-rl/enduro-bot/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "enduro-agent"
+name = "enduro-bot"
 version = "0.1.0"
 description = ""
 authors = ["Debajyoti Raychaudhuri <draychaudhuri1086@gmail.com>"]
