Update and rename generalized-rl/flappy-bird-agent/pyproject.toml to generalized-rl/flappy-bird-bot/pyproject.toml

--- a/generalized-rl/flappy-bird-bot/pyproject.toml
+++ b/generalized-rl/flappy-bird-bot/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "flappy-bird-agent"
+name = "flappy-bird-bot"
 version = "0.1.0"
 description = ""
 authors = ["Debajyoti Raychaudhuri <draychaudhuri1086@gmail.com>"]
