--- a/symbiosis/pyproject.toml
+++ b/symbiosis/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
-name = "generalized-rl"
+name = "symbiosis"
 version = "0.1.0"
-description = "Generalized RL"
+description = "Symbiosis"
 authors = ["Debajyoti Raychaudhuri <draychaudhuri1086@gmail.com>"]
 
 [tool.poetry.dependencies]
