--- a/symbiosis/chess-bot/pyproject.toml
+++ b/symbiosis/chess-bot/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Debajyoti Raychaudhuri <draychaudhuri1086@gmail.com>"]
 [tool.poetry.dependencies]
 python = "3.6.8"
 python-chess = "^0.31.4"
+svglib = "^1.1.0"
 
 [tool.poetry.dev-dependencies]
 
