--- a/symbiosis/pyproject.toml
+++ b/symbiosis/pyproject.toml
@@ -15,6 +15,8 @@ tensorflow-gpu = "2.2.0"
 opencv-python = "^4.4.0.44"
 dill = "^0.3.2"
 loguru = "^0.4.1"
+scikit-learn = "^0.21.3"
+tqdm = "^4.50.2"
 
 [build-system]
 requires = ["poetry>=0.12"]
