--- a/symbiosis/chess-bot/pyproject.toml
+++ b/symbiosis/chess-bot/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["Debajyoti Raychaudhuri <draychaudhuri1086@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "3.6.8"
+python = "^3.6.8"
 python-chess = "^0.31.4"
 svglib = "^1.1.0"
 
