--- a/symbiosis/chess-bot/pyproject.toml
+++ b/symbiosis/chess-bot/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Debajyoti Raychaudhuri <draychaudhuri1086@gmail.com>"]
 python = "^3.6.8"
 python-chess = "^0.31.4"
 svglib = "^1.1.0"
+Cython = "^0.29.23"
 
 [tool.poetry.dev-dependencies]
 
