--- a/symbiosis/flappy-bird-with-gunnar-farneback-bot/pyproject.toml
+++ b/symbiosis/flappy-bird-with-gunnar-farneback-bot/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "flappy-bird-with-gunnar-farneback-bot"
 version = "0.1.0"
-description = ""
+description = "Flappy Bird With gunnar-farneback Bot"
 authors = ["Debajyoti Raychaudhuri <draychaudhuri1086@gmail.com>"]
 
 [tool.poetry.dependencies]
