--- a/symbiosis/chess-bot/pyproject.toml
+++ b/symbiosis/chess-bot/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Debajyoti Raychaudhuri <draychaudhuri1086@gmail.com>"]
 
 [tool.poetry.dependencies]
 python-chess = "^0.31.4"
-svglib = "^1.1.0"
+cairosvg = "^2.5.2"
 Cython = "^0.29.23"
 
 [tool.poetry.dev-dependencies]
